<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp"
    android:background="@drawable/transparent_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/send_notif_text"
            android:text="@string/send_notificaton"
            android:textColor="@color/neutral_font_color"
            android:textSize="20sp"
            android:fontFamily="@font/kreon_light"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="20dp"/>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/send_notification_edittext_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/send_notif_text"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            android:textColorHint="@color/divider_line_gray"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/divider_line_gray">

            <EditText
                android:id="@+id/send_notification_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/neutral_font_color"
                android:ems="10"
                android:hint="@string/notification_text"
                android:textColor="@color/neutral_font_color"
                android:textColorHint="@color/divider_line_gray" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/send_notification_edittext_wrap">

            <Button
                android:id="@+id/dialog_cancel_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/button_background"
                android:text="@string/cancel"
                android:textColor="@color/neutral_font_color"
                android:fontFamily="@font/kreon_light"
                android:textSize="16sp" />

            <Button
                android:id="@+id/dialog_send_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/button_background"
                android:text="@string/send"
                android:textColor="@color/neutral_font_color"
                android:fontFamily="@font/kreon_light"
                android:textSize="16sp" />

        </LinearLayout>



    </RelativeLayout>




</RelativeLayout>