<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_background"
    tools:context=".StudentRegisterActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/student_login_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        app:cardCornerRadius="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#20202C"
            android:padding="10dp">

            <TextView
                android:id="@+id/student_register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/marcellus_sc"
                android:text="@string/register_text"
                android:textColor="@color/neutral_font_color"
                android:textSize="40sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/student_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/student_register_text"
                android:layout_marginTop="12dp"
                android:padding="12dp"
                android:textColorHint="@color/divider_line_gray">

            <EditText
                android:id="@+id/student_nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/neutral_font_color"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:textColor="@color/neutral_font_color"
                android:textColorHint="@color/divider_line_gray" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/student_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/student_name_input"
                android:layout_marginTop="12dp"
                android:padding="12dp"
                android:textColorHint="@color/divider_line_gray">

                <EditText
                    android:id="@+id/student_emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/neutral_font_color"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/neutral_font_color"
                    android:textColorHint="@color/divider_line_gray" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/student_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/student_email_input"
                android:layout_marginTop="12dp"
                android:padding="12dp"
                android:textColorHint="@color/divider_line_gray"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/divider_line_gray">

                <EditText
                    android:id="@+id/student_passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/neutral_font_color"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/neutral_font_color"
                    android:textColorHint="@color/divider_line_gray" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/student_confirm_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/student_password_input"
                android:layout_marginTop="12dp"
                android:padding="12dp"
                android:textColorHint="@color/divider_line_gray"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/divider_line_gray">

                <EditText
                    android:id="@+id/student_confirmPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/neutral_font_color"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/neutral_font_color"
                    android:textColorHint="@color/divider_line_gray" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/student_register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/student_confirm_password_input"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/kreon_light"
                android:background="@drawable/button_background"
                android:text="@string/register_text"
                android:textColor="@color/neutral_font_color"
                android:textSize="20sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>